RepeatModeler 2.0.3
===================
  - The program now generates a logfile in the working directory named
    <seqfile>-rmod.log.  This file contains the random seed number used
    and some high level stats on the run for use with reporting problems
    with the program. 
  - Fixed a problem with the orientation/coordinates provided in the
    Stockholm output format that affected a subset of the sequences.
  - Fixed a bug affecting the trim functions of the Linup tool.

RepeatModeler 2.0.2
===================
  - First release of a set of manual curation tools for use with
    de-novo generated TE libraries.
  - Added generateSeedAlignments.pl to generate Dfam compatible 
    seed alignments given a consensus based TE library and 
    RepeatMasker output.
  - Fixed bug in N50 calculation.
  - Fixed Ruzzo-Tompa maximal scoring subsequences implementation.
  - lots of small bugfixes.

RepeatModeler 2.0.1
===================
  - Work around a bug introduced in the new NCBI Blast 2.10.0 with 
    version 5 databases.
  - RepeatScout in some rare cases will generate models for very 
    long-period satellites. This can cause Refiner to go crazy creating 
    tons of off-diagonal alignments. This version filters out 
    these rare cases.
  - This version now prints out the version of each dependency in the log.

RepeatModeler 2.0
=================
  - Many RepeatModeler seed alignments and consensus sequences contained 
    stretch of N’s due masking performed by TRF.  Instead of using the masked 
    sequences in the final seed alignment the original genomic sequences 
    are used, preserving low-complexity regions in the final consensus called.
  - The batching system was refactored to improve handling of short input 
    sequences often found in early assemblies or low-coverage genome projects.
  - The interface to TRF was inefficient and a major bottleneck in the 
    RepeatModeler pipeline.  The simple/tandem repeat masking step was 